css/style.css
html {
	box-sizing: border-box;
	-webkit-font-smoothing: antialiased;
}

*, *:before, *:after {
	box-sizing: inherit;
	-webkit-font-smoothing: inherit;
}

body {
	margin:0;
	width:100%;
}

.top-nav {
	height: 10rem;
	width: 100%;
}

.top-nav > .content > .main-logo {
	height: 10rem;
	width: 12.7rem;
	padding: 0;
	margin: 0;
	display: block;
	float: left;
}

.top-nav > .content > .main-logo > .logo-pic {
	width: 12.3rem;
}

.top-nav > .content > .menu {
	height: 10rem;
	width: 15rem;
	padding: 0;
	margin: 0;
	display: block;
	float: right;
}

.sash {
	width: 100%;
	height: 6rem;
}

.stripe {
	background-color:cornflowerblue;
}

.stripe > .content {
	width: 37rem;
	margin: 0 auto;
	font-size: 0.75rem;
}

.col_header {
	padding-left: 1rem;
	text-align: center;
}

#Addbtn {
	width:8rem;
}

/* these are for the pre-bootstrap button */

.add-button {
	width: 9rem;
	background-color:black;
	border-color:black;
	border-radius:0.25rem;
	color: white;
	font-size:1rem;
	padding: .1rem 1rem;
	margin-left: 0.7rem;
}

.add-button:hover {
	background-color: gray;
	border-color: gray;
}

.edit_buttons {
	width: 8rem;
	padding:0.2rem;
}

.little_button {
	margin: 0 0.2rem;
	color: white;
	background-color: gray;
	border-color: gray;
	border-radius: 0.2rem;
}

.little_button:hover {
	background-color: black;
	border-color: black;
	color: white;
}

/*.workspace {
	height: 24rem;
	width: 100%
	margin: 0 auto;
	overflow: auto;
}

.workspace > .form-inline {
	width: 100%;
}

@media only screen and (max-width: 400px){
	.workspace {
	height: 24rem;
	width: 30rem;
	margin: 0 auto;
	overflow: auto;
}
}*/

.container {
	width: 80rem;
	margin: 0 auto;
}

@media only screen and (max-width: 400px) {
	.container {
		width: 100%;
	}
}

.padthebutton {
	padding: 1rem;
}

#smallworkspace {
	display:none;
}

/* These lines switch from a row of input boxes to a column on small screens */

.form-group {
	text-align: center;
	width: 80rem;
}

@media only screen and (max-width: 400px) {
	#bigworkspace {
		display: none;
	}
	#smallworkspace  {
		display: block;
	}
	#amountbox, #totalbox > .input-group-addon {
		width: 1rem;
	}

	#Price, #Total {
		width: 16.5rem;
	}
}

#biglist > ul > li {
	display: inline-block;
	padding: 1rem;
	text-align: center;
}


#small_list {
	display: none;
}

@media only screen and (max-width: 400px) {
	#biglist {
		display:none;
	}
	#small_list {
		display: block;
	}
}


/*.workspace {
	float: right;
}*/

/* These lines are for a table that probably will not be used */
.results {
	float: right;
	margin-top:1rem;
}

.clear {
	clear: both;
	line-height: 0;
}

#thelist > tbody > tr > td {
	padding: 0.5rem 1rem;
}

#checkout > tbody > tr > td {
	padding: 0.5rem 1rem;
	text-align: right;
}

.resultstxt {
	font-weight: bold;
}

#price_box {
	width: 7rem;
}

.dollars {
	width: 5rem;
}

.unitprice {
	width: 3.5rem;
}

.submission {
	float: right;
}

#proceed {
	font-size: 0.8rem;
	padding:0.2rem;
	background-color:black;
	color: white;
	border-radius:0.25rem;
}

#proceed:hover {
	background-color:gray;
}

footer {
	width: 100%;
}

.credits {
	width: 20rem;
	margin: 0 auto;
}

